--- a/project/src/main/res/layout/checkout_traveler_button.xml
+++ b/project/src/main/res/layout/checkout_traveler_button.xml
@@ -6,12 +6,12 @@
     <Button
         android:id="@+id/select_traveler_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@drawable/cars_fake_spinner"
         android:drawableLeft="@drawable/driver_small"
         android:drawablePadding="12dp"
         android:gravity="left|center_vertical"
-        android:padding="16dp"
+        android:paddingLeft="8dp"
         android:text="@string/cars_saved_contacts_text"
         android:textAllCaps="false"
         android:textColor="@color/cars_actionbar_text_color"
