--- a/project/src/main/res/layout/section_car_category_summary.xml
+++ b/project/src/main/res/layout/section_car_category_summary.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView
     android:id="@+id/card_view"
-    android:foreground="?android:attr/selectableItemBackground"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    card_view:cardCornerRadius="4dp">
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="1dp">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -15,13 +17,14 @@
         <com.expedia.bookings.widget.OptimizedImageView
             android:id="@+id/background_image_view"
             android:layout_width="match_parent"
-            android:layout_height="144dp" />
+            android:scaleType="centerCrop"
+            android:layout_height="134dp" />
 
         <View
             android:layout_width="match_parent"
-            android:background="@drawable/cars_details_gradient_bottom"
-            android:layout_height="72dp"
-            android:layout_gravity="bottom" />
+            android:layout_height="67dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/cars_details_gradient_bottom" />
 
         <LinearLayout
             android:id="@+id/details_container"
@@ -29,52 +32,54 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:orientation="horizontal"
-            android:padding="12dp">
+            android:paddingBottom="9dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingTop="9dp">
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/category_text"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:textColor="#FFF"
-                android:gravity="left"
-                android:textStyle="bold"
                 android:layout_gravity="left"
-                android:textSize="18sp"
-                tools:text="ECONOMY" />
+                android:layout_weight="1"
+                android:gravity="left"
+                android:textColor="#FFF"
+                android:textSize="16sp"
+                app:textStyle="medium"
+                tools:text="" />
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/category_price_text"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:gravity="right"
-                android:textStyle="bold"
                 android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:gravity="right"
                 android:textColor="#FFF"
-                android:textSize="18sp"
-                tools:text="$10" />
+                android:textSize="16sp"
+                app:textStyle="medium"
+                tools:text="" />
 
         </LinearLayout>
     </FrameLayout>
 
     <LinearLayout
-        android:layout_marginTop="144dp"
         android:id="@+id/price_container"
         android:layout_width="match_parent"
-        android:background="@android:color/white"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/background_image_view"
+        android:layout_height="35dp"
         android:layout_alignParentLeft="true"
+        android:layout_below="@+id/background_image_view"
+        android:layout_marginTop="134dp"
+        android:background="@android:color/white"
         android:orientation="horizontal"
         android:padding="12dp">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="4dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/person" />
 
         <TextView
@@ -82,17 +87,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:padding="2dp"
             android:layout_marginRight="4dp"
-            android:textColor="@color/cars_actionbar_text_color"
-            android:textSize="12sp"
-            android:text="5" />
+            android:paddingLeft="4dp"
+            android:text="5"
+            android:textColor="#888888"
+            android:textSize="10sp" />
 
         <ImageView
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="4dp"
-            android:layout_height="wrap_content"
             android:src="@drawable/baggage" />
 
 
@@ -100,18 +105,18 @@
             android:id="@+id/bag_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
             android:layout_gravity="center_vertical"
-            android:padding="2dp"
-            android:textColor="@color/cars_actionbar_text_color"
-            android:textSize="12sp"
-            android:text="3" />
+            android:layout_marginRight="4dp"
+            android:paddingLeft="4dp"
+            android:text="3"
+            android:textColor="#888888"
+            android:textSize="10sp" />
 
         <ImageView
-            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="4dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="4dp"
             android:src="@drawable/doors" />
 
         <TextView
@@ -119,22 +124,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:padding="2dp"
             android:layout_marginRight="4dp"
-            android:textColor="@color/cars_actionbar_text_color"
-            android:textSize="12sp"
-            android:text="4" />
+            android:paddingLeft="4dp"
+            android:text="4"
+            android:textColor="#888888"
+            android:textSize="10sp" />
 
         <TextView
             android:id="@+id/total_price_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
-            android:gravity="right"
             android:layout_marginLeft="4dp"
             android:layout_weight="1"
-            android:textColor="@color/cars_actionbar_text_color"
-            android:textSize="12sp"
+            android:gravity="right"
+            android:textColor="#888888"
+            android:textSize="10sp"
             tools:text="Total $2132" />
     </LinearLayout>
 
