--- a/project/src/main/res/layout/section_car_offer_row.xml
+++ b/project/src/main/res/layout/section_car_offer_row.xml
@@ -31,38 +31,80 @@
                 android:layout_height="wrap_content"
                 android:padding="14dp">
 
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/vendor"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#3C3C3C"
-                    android:textSize="18sp"
-                    app:textStyle="medium"
-                    tools:text="" />
+                    android:orientation="vertical">
 
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/car_details"
-                    style="@style/CarOfferText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_below="@+id/vendor"
-                    android:layout_toLeftOf="@+id/reserve_now"
-                    app:textStyle="medium"
-                    tools:text="" />
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/vendor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3C3C3C"
+                        android:textSize="18sp"
+                        app:textStyle="medium"
+                        tools:text="" />
 
-                <TextView
-                    android:id="@+id/address"
-                    style="@style/CarOfferText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_below="@+id/car_details"
-                    android:layout_toLeftOf="@+id/reserve_now"
-                    android:gravity="bottom"
-                    android:paddingBottom="8dp"
-                    android:paddingTop="8dp"
-                    tools:text="" />
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/car_details"
+                        style="@style/CarOfferText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_below="@+id/vendor"
+                        android:layout_toLeftOf="@+id/reserve_now"
+                        android:paddingBottom="6dp"
+                        app:textStyle="medium"
+                        tools:text="" />
+
+                    <TextView
+                        android:id="@+id/passengers"
+                        style="@style/CarOfferText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/passenger_details"
+                        android:drawablePadding="6dp"
+                        android:paddingBottom="2dp"
+                        android:paddingTop="2dp" />
+
+                    <TextView
+                        android:id="@+id/bags"
+                        style="@style/CarOfferText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/bag_details"
+                        android:drawablePadding="6dp"
+                        android:paddingBottom="2dp"
+                        android:paddingTop="2dp" />
+
+                    <TextView
+                        android:id="@+id/doors"
+                        style="@style/CarOfferText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/door_details"
+                        android:drawablePadding="6dp"
+                        android:paddingBottom="2dp"
+                        android:paddingTop="2dp" />
+
+                    <TextView
+                        android:id="@+id/transmission"
+                        style="@style/CarOfferText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/transmission_details"
+                        android:drawablePadding="6dp"
+                        android:paddingBottom="2dp"
+                        android:paddingTop="2dp" />
+
+                    <TextView
+                        android:id="@+id/address"
+                        style="@style/CarOfferText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="6dp"
+                        tools:text="" />
+                </LinearLayout>
 
                 <com.expedia.bookings.widget.LinearLayout
                     android:id="@+id/price_container"
