--- a/project/src/main/res/layout/section_car_offer_row.xml
+++ b/project/src/main/res/layout/section_car_offer_row.xml
@@ -26,8 +26,9 @@
                 android:padding="14dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/reserve_now"
                     android:orientation="vertical">
 
                     <com.expedia.bookings.widget.TextView
@@ -42,13 +43,15 @@
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/car_details"
                         style="@style/CarOfferText"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_below="@+id/vendor"
                         android:layout_toLeftOf="@+id/reserve_now"
                         android:paddingBottom="6dp"
                         app:textStyle="medium"
+                        android:ellipsize="end"
+                        android:singleLine="true"
                         tools:text="" />
 
                     <TextView
@@ -94,9 +97,11 @@
                     <TextView
                         android:id="@+id/address"
                         style="@style/CarOfferText"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingTop="6dp"
+                        android:ellipsize="end"
+                        android:singleLine="true"
                         tools:text="" />
                 </LinearLayout>
 
