--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -99,4 +99,12 @@
         <item name="android:paddingLeft">25dp</item>
         <item name="android:drawablePadding">15dp</item>
     </style>
+
+    <style name="LXButton" parent="android:Widget.Button" >
+        <item name="android:background">@color/lx_primary_color</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+    </style>
 </resources>
