--- a/project/src/main/res/layout/lx_details_presenter.xml
+++ b/project/src/main/res/layout/lx_details_presenter.xml
@@ -53,9 +53,36 @@
                 android:id="@+id/offers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:showDividers="middle|end"
-                android:divider="?android:dividerHorizontal"
-                android:orientation="vertical" />
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/offers_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="?android:dividerHorizontal"
+                    android:orientation="vertical"
+                    android:showDividers="middle|end" />
+
+                <LinearLayout
+                    android:id="@+id/offer_show_more_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="?android:dividerHorizontal"
+                    android:orientation="vertical"
+                    android:showDividers="end"
+                    android:visibility="gone">
+
+                    <com.expedia.bookings.widget.ShowMoreWithCountWidget
+                        android:id="@+id/show_more_widget"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="8dp"
+                        android:background="?android:attr/selectableItemBackground" />
+
+                </LinearLayout>
+            </com.expedia.bookings.widget.LXOffersListWidget>
 
             <include
                 android:id="@+id/description"
