--- a/project/src/main/res/values/integers.xml
+++ b/project/src/main/res/values/integers.xml
@@ -284,5 +284,5 @@
     <!-- The maximum days range for LX search -->
     <integer name="calendar_max_days_lx_search">330</integer>
     <integer name="lx_default_search_range">14</integer>
-
+    <integer name="lx_offers_list_initial_size">3</integer>
 </resources>
