--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -95,16 +95,16 @@
     <string name="preference_force_custom_server_http_only">preference_force_custom_server_http_only</string>
     <string name="preference_enable_picasso_logging">preference_enable_picasso_logging</string>
     <string name="preference_force_passenger_category_error">preference_force_passenger_category_error</string>
-    <string name="preference_aa_test">ExpediaAndroidAppAATest</string>
-    <string name="preference_etp_test">ExpediaAndroidAppETPDefaultNow</string>
-    <string name="preference_book_above_fold">EBAndroidAppHISBookAboveFold</string>
-    <string name="preference_hotel_free_cancellation">EBAndroidAppHISFreeCancellation</string>
-    <string name="preference_hotel_photo_treatment">ExpediaAndroidAppSwipablePhotos</string>
-    <string name="preference_flight_free_cancellation">ExpediaAndroidAppFlightCKOFreeCancelation</string>
-    <string name="preference_hotel_search_influence_messaging">ExpediaAndroidAppHSRLoadMessaging</string>
-    <string name="preference_launch_screen">ExpediaAndroidAppLaunchPageDefaultToCollections</string>
-    <string name="preference_checkout_or_messaging">ExpediaAndroidAppAddORToForm</string>
-    <string name="preference_hotel_result_rating">ExpediaAndroidAppSRPercentRecommend</string>
+    <string name="preference_aa_test">6714</string>
+    <string name="preference_etp_test">6800</string>
+    <string name="preference_book_above_fold">6815</string>
+    <string name="preference_hotel_free_cancellation">6801</string>
+    <string name="preference_hotel_photo_treatment">7021</string>
+    <string name="preference_flight_free_cancellation">7005</string>
+    <string name="preference_hotel_search_influence_messaging">7017</string>
+    <string name="preference_launch_screen">7369</string>
+    <string name="preference_checkout_or_messaging">7372</string>
+    <string name="preference_hotel_result_rating">7373</string>
 
     <string name="preference_abacus_setting_server">Abacus Server</string>
     <string name="preference_abacus_setting_controlgroup">Control Group</string>
