--- a/project/src/main/res/drawable/lx_button_background_selector.xml
+++ b/project/src/main/res/drawable/lx_button_background_selector.xml
@@ -2,31 +2,31 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/lx_dropdown_background_color" />
-            <stroke android:color="@color/lx_dropdown_disabled_stroke" android:width="1dp" />
-            <corners android:radius="2dp" />
+            <solid android:color="#f0f0f0" />
+            <stroke android:color="@color/search_dropdown_disabled_stroke" android:width="2px" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/lx_primary_color" />
-            <corners android:radius="2dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/lx_primary_color" />
-            <corners android:radius="2dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/lx_dropdown_background_color" />
-            <stroke android:color="@color/lx_dropdown_disabled_stroke" android:width="1dp" />
-            <corners android:radius="2dp" />
+            <solid android:color="#f0f0f0" />
+            <stroke android:color="@color/search_dropdown_disabled_stroke" android:width="1px" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
