--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -229,7 +229,6 @@
     <color name="cars_tooltip_color">#915B7C</color>
     <color name="cars_tooltip_disabled_color">#9D9D9D</color>
     <color name="cars_slider_progress_color">#50FFFFFF</color>
-    <color name="cars_dropdown_disabled_stroke">#C3C3C3</color>
     <color name="cars_dropdown_background_color">#ECECEC</color>
     <color name="cars_actionbar_text_color">#5C5C5C</color>
     <color name="cars_invalid_days_calendar">#A9A9A9</color>
@@ -253,11 +252,10 @@
     <color name="bg_login_facebook_pressed">#233A6A</color>
 
     <!-- LX colors -->
-    <color name="lx_primary_color">#AF580A</color>
-    <color name="lx_secondary_color">#DB6F0D</color>
+    <color name="lx_primary_color">#DB6F0D</color>
+    <color name="lx_secondary_color">#A8540D</color>
     <color name="lx_heading_text_color">#5C5C5C</color>
-    <color name="lx_dropdown_background_color">#ECECEC</color>
-    <color name="lx_dropdown_disabled_stroke">#C3C3C3</color>
+    <color name="lx_dropdown_background_color">#F0F0F0</color>
     <color name="lx_valid_days_calendar">#3A3A3A</color>
     <color name="lx_invalid_days_calendar">#A9A9A9</color>
     <color name="lx_calendar_week_color">#888888</color>
@@ -284,4 +282,5 @@
     <color name="lx_secondary_color_disabled">#F6DAC0</color>
     <color name="lx_dates_container_border_color">#CCCCCC</color>
 
+    <color name="search_dropdown_disabled_stroke">#C3C3C3</color>
 </resources>
