--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -278,10 +278,11 @@
     <dimen name="car_time_slider_text_size">12dp</dimen>
     <dimen name="car_time_slider_text_container">110dp</dimen>
     <dimen name="car_checkout_scrollview_padding">200dp</dimen>
-    <dimen name="car_search_dropdown_padding">0dp</dimen>
-    <dimen name="car_search_toggle_button_padding">10dp</dimen>
     <dimen name="car_search_list_image_container_height">134dp</dimen>
     <dimen name="car_search_details_container_height">35dp</dimen>
+    <dimen name="search_dropdown_padding">0dp</dimen>
+    <dimen name="search_toggle_button_padding">10dp</dimen>
+
     <!-- Car Confirmation Slide to reserve -->
     <dimen name="car_slide_to_purchase_price_text_size">13dp</dimen>
     <dimen name="car_slide_to_purchase_padding">50dp</dimen>
