--- a/project/src/travelocity/res/values/colors.xml
+++ b/project/src/travelocity/res/values/colors.xml
@@ -26,4 +26,5 @@
     <color name="launch_card_explore_now_background_color">#4791C0</color>
     <color name="destination_list_launch_card_title_text_color">#003E6F</color>
     <color name="destination_list_launch_card_country_text_color">#57A3CC</color>
+    <color name="destination_list_detail_container_background">#ff070f24</color>
 </resources>
