--- a/project/src/main/res/layout/include_account_button.xml
+++ b/project/src/main/res/layout/include_account_button.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/login_failed"
+            android:text="@string/sign_in_failed"
             android:textSize="@dimen/login_button_text_size"
             android:textColor="@color/text_black" />
     </LinearLayout>
