--- a/project/src/main/res/menu/menu_launch.xml
+++ b/project/src/main/res/menu/menu_launch.xml
@@ -9,7 +9,7 @@
         <menu>
             <item
                 android:id="@+id/add_itinerary_login"
-                android:title="@string/log_in"/>
+                android:title="@string/sign_in"/>
             <item
                 android:id="@+id/add_itinerary_guest"
                 android:title="@string/find_itinerary_pound"/>
@@ -19,7 +19,7 @@
         android:id="@+id/ab_log_out"
         android:icon="@drawable/ic_log_out_person"
         android:showAsAction="never"
-        android:title="@string/log_out"/>
+        android:title="@string/sign_out"/>
     <item
         android:id="@+id/settings"
         android:icon="@android:drawable/ic_menu_manage"
