--- a/project/src/main/res/layout/traveler_contact_details_widget.xml
+++ b/project/src/main/res/layout/traveler_contact_details_widget.xml
@@ -108,6 +108,7 @@
             android:id="@+id/edit_email_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
             android:hint="@string/email_address_hint"
             android:nextFocusDown="@+id/edit_phone_number"
             android:nextFocusRight="@+id/edit_phone_number"
