--- a/project/src/main/res/layout/snippet_launch_list_header.xml
+++ b/project/src/main/res/layout/snippet_launch_list_header.xml
@@ -1,21 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- You need to set the paddingTop based upon the height of the LaunchLobWidget -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
-    <FrameLayout 
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_header_top_space"
-        android:visibility="gone">
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_header_double_row_top_space"
-        android:visibility="visible">
-    </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
